[workspace]
members = [
    "crates/hasher",
    "crates/merkle_tree",
    "crates/mmr",
    "crates/store",
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.33.0", features = ["full"] } # Async runtime
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "sqlite",
] } # SQLite for rust
thiserror = "2.0.0" # Error handling
async-trait = "0.1.74" # Async traits
hex = "0.4.3" # Hex encoding
tiny-keccak = "2.0.2" # Keccak hashing
starknet = "0.12.0" # StarkNet pedersen
starknet-crypto = "0.7.2" # StarkNet poseidon
uuid = { version = "1.4.1", features = ["v4"] } # UUID
parking_lot = "0.12.1" # Sync mutex
num-bigint = "0.4.4" # Bigints in hashers (TODO: double check if needed)
num-traits = "0.2.19" # Bigints in hashers (TODO: double check if needed)
indexmap = "2.6.0"
strum = "0.26" # better enums
strum_macros = "0.26" # better enums

# [dev-dependencies]
# criterion = { version = "0.5", features = [
#     "html_reports",
#     "async",
# ] } # Benchmarking

# [[bench]]
# name = "mmr_benchmark"
# harness = false

# [[bench]]
# name = "incremental_benchmark"
# harness = false

# [features]
# default = ["store", "hasher"]
# all = [
#     "store",
#     "sqlite",
#     "memory",
#     "hasher",
#     "keccak",
#     "poseidon",
#     "pedersen",
#     "mmr",
#     "stacked_mmr",
#     "draft_mmr",
#     "merkle_tree",
#     "incremental_merkle_tree",
# ]
# store = []
# sqlite = ["store"]
# memory = ["store"]
# hasher = []
# keccak = ["hasher"]
# poseidon = ["hasher"]
# pedersen = ["hasher"]
# mmr = ["hasher", "store"]
# stacked_mmr = ["mmr"]
# draft_mmr = ["stacked_mmr"]
# merkle_tree = ["hasher", "store"]
# incremental_merkle_tree = ["merkle_tree"]

[package]
name = "accumulators"
version = "0.1.0"
edition = "2021"

[dependencies]
hasher = { path = "crates/hasher" }
merkle_tree = { path = "crates/merkle_tree" }
mmr = { path = "crates/mmr" }
store = { path = "crates/store" }

# Add any other dependencies needed for tests
[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
hasher = { path = "crates/hasher", features = ["all"] }
merkle_tree = { path = "crates/merkle_tree" }
store = { path = "crates/store" }
hex = "0.4.3"
