[package]
name = "hasher"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet = "0.12.0"
strum = "0.26.0"
thiserror = "1.0.60"
hex = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.19"
tiny-keccak = "2.0.2"
starknet-crypto = "0.7.2"
strum_macros = "0.26.0"

[features]
all = [
    "keccak",
    "poseidon",
    "pedersen",
]
keccak = []
poseidon = []
pedersen = []