[package]
name = "hasher"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs.git", branch = "master" }
strum = "0.26.0"
hex = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.19"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
starknet-crypto = "0.7.2"
strum_macros = "0.26.0"
sha2 = "0.10.8"

[features]
all = [
    "keccak",
    "poseidon",
    "pedersen",
    "sha256",
]
keccak = []
poseidon = []
pedersen = []
sha256 = []
