[package]
name = "mmr"
version = "0.1.0"
edition = "2021"

[dependencies]
hasher = { path = "../hasher" }
store = { path = "../store", default-features = false }

thiserror = { workspace = true }
uuid = { version = "1.0.1", features = ["v4"] }

[features]
stacked_mmr = []
draft_mmr = []
# with-tokio = ["store/tokio-support"]