[package]
name = "mmr"
version = "0.1.0"
edition = "2021"

[dependencies]
hasher = { path = "../hasher", features = ["poseidon"] }
store = { path = "../store", features = ["memory"], default-features = false }

thiserror = { workspace = true }
uuid = { version = "1.0.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }

[features]
stacked_mmr = []
draft_mmr = []
# with-tokio = ["store/tokio-support"]