[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.60"
async-trait = "0.1.83"
parking_lot = "0.12.3"
sqlx = { version = "0.8.2", features = ["sqlite"] }
tokio = { version = "1.41.0", features = ["sync"] }

[features]
all = ["sqlite", "memory"]
default = ["sqlite"]
sqlite = []
memory = []